update category tables + endpoints
